add new styles for cards

--- a/markup/source/index.html
+++ b/markup/source/index.html
@@ -16,7 +16,7 @@
     <section class="game__data data">
       <h2 className="visually-hidden">Form for character name</h2>
       <form class="data__form" action="#" method="post">
-        <input class="data__input" type="text" placeholder="Rick">
+        <input class="data__input" type="text" placeholder="Enter name of character">
       </form>
     </section>
 
@@ -24,27 +24,27 @@
       <h2 className="visually-hidden">Rick and Morty characters</h2>
       <ul class="content__list">
         <li class="content__item game__item">
-          <img class="content__img game__img" src="" alt="">
+          <img class="content__img game__img" src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" alt="">
           <button class="content__close-button"></button>
         </li>
         <li class="content__item game__item">
-          <img class="content__img game__img" src="" alt="">
+          <img class="content__img game__img" src="https://rickandmortyapi.com/api/character/avatar/2.jpeg" alt="">
           <button class="content__close-button"></button>
         </li>
         <li class="content__item game__item">
-          <img class="content__img game__img" src="" alt="">
+          <img class="content__img game__img" src="https://rickandmortyapi.com/api/character/avatar/3.jpeg" alt="">
           <button class="content__close-button"></button>
         </li>
         <li class="content__item game__item">
-          <img class="content__img game__img" src="" alt="">
+          <img class="content__img game__img" src="https://rickandmortyapi.com/api/character/avatar/4.jpeg" alt="">
           <button class="content__close-button"></button>
         </li>
         <li class="content__item game__item">
-          <img class="content__img game__img" src="" alt="">
+          <img class="content__img game__img" src="https://rickandmortyapi.com/api/character/avatar/5.jpeg" alt="">
           <button class="content__close-button"></button>
         </li>
         <li class="content__item game__item">
-          <img class="content__img game__img" src="" alt="">
+          <img class="content__img game__img" src="https://rickandmortyapi.com/api/character/avatar/6.jpeg" alt="">
           <button class="content__close-button"></button>
         </li>
       </ul>
@@ -53,8 +53,8 @@
     <section class="game__party party">
       <h2 class="party__caption">Party</h2>
       <ul class="party__list">
-        <li class="party__item game__item"></li>
-        <li class="party__item game__item"></li>
+        <li class="party__item game__item"><img class="party__img game__img" src="https://rickandmortyapi.com/api/character/avatar/6.jpeg" alt=""><p class="party__name">Rick</p></li>
+        <li class="party__item game__item"><p class="party__name">Morty</p></li>
       </ul>
     </section>
   </article>
